修复home_top默认情况下显示不正确的报错 修改cdn 文档更新

--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -25,7 +25,7 @@ div
   //- 黑色模式粒子效果canvas
   if theme.universe.enable
     canvas(id="universe")
-    script(async src="https://npm.elemecdn.com/acrylic-static@1.0.0/dark/dark.js")
+    script(async src="https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/dark/dark.js")
 
   //- 控制台打印信息
   if theme.console.enable
@@ -71,7 +71,7 @@ div
   script(src="https://npm.elemecdn.com/jquery@latest/dist/jquery.min.js")
   //- 气泡效果
   if theme.bubble.enable
-    script(async data-pjax src="https://npm.elemecdn.com/acrylic-static@1.0.0/bubble/bubble.js")
+    script(async data-pjax src="https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/bubble/bubble.js")
   //- 自定义js
   script(data-pjax src="/js/anzhiyufunction.js")
   script(async src="/js/anzhiyuOnlyOne.js")
