--- a/layout/includes/anzhiyu/log-js.pug
+++ b/layout/includes/anzhiyu/log-js.pug
@@ -1,4 +1,6 @@
 - let author = config.author
+- let launch_time = theme.footer.runtime.launch_time
+- let since = theme.footer.owner.since
 script.
   // 消除控制台打印
   var HoldLog = console.log;
@@ -9,7 +11,7 @@ script.
     const Log = function () {
       HoldLog.apply(console, arguments);
     }; //在恢复前输出日志
-    const grt = new Date("03/26/2023 00:00:00"); //此处修改你的建站时间或者网站上线时间
+    const grt = new Date("#{launch_time}"); //此处修改你的建站时间或者网站上线时间
     now1.setTime(now1.getTime() + 250);
     const days = (now1 - grt) / 1000 / 60 / 60 / 24;
     const dnum = Math.floor(days);
@@ -18,18 +20,18 @@ script.
       `生活明朗, 万物可爱`,
       `
           
-       █████╗  ██████╗██████╗ ██╗   ██╗██╗     ██╗ ██████╗
-      ██╔══██╗██╔════╝██╔══██╗╚██╗ ██╔╝██║     ██║██╔════╝
-      ███████║██║     ██████╔╝ ╚████╔╝ ██║     ██║██║     
-      ██╔══██║██║     ██╔══██╗  ╚██╔╝  ██║     ██║██║     
-      ██║  ██║╚██████╗██║  ██║   ██║   ███████╗██║╚██████╗
-      ╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝   ╚═╝   ╚══════╝╚═╝ ╚═════╝
+         █████╗ ███╗   ██╗███████╗██╗  ██╗██╗██╗   ██╗██╗   ██╗
+        ██╔══██╗████╗  ██║╚══███╔╝██║  ██║██║╚██╗ ██╔╝██║   ██║
+        ███████║██╔██╗ ██║  ███╔╝ ███████║██║ ╚████╔╝ ██║   ██║
+        ██╔══██║██║╚██╗██║ ███╔╝  ██╔══██║██║  ╚██╔╝  ██║   ██║
+        ██║  ██║██║ ╚████║███████╗██║  ██║██║   ██║   ╚██████╔╝
+        ╚═╝  ╚═╝╚═╝  ╚═══╝╚══════╝╚═╝  ╚═╝╚═╝   ╚═╝    ╚═════╝
           
           `,
       "已上线",
       dnum,
       "天",
-      "©2020 By 安知鱼",
+      "©#{since} By 安知鱼",
     ];
     const ascll2 = [`NCC2-036`, `调用前置摄像头拍照成功，识别为【小笨蛋】.`, `Photo captured: `, `🤪`];
 
