--- a/layout/includes/bili-banner/index.pug
+++ b/layout/includes/bili-banner/index.pug
@@ -1,2 +1,2 @@
 //- 随机背景
-script(src=url_for("https://npm.elemecdn.com/acrylic-static@1.0.0/biliBg/biliBg.js"), data-pjax)
+script(src=url_for("https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/biliBg/biliBg.js"), data-pjax)
