--- a/layout/includes/footer.pug
+++ b/layout/includes/footer.pug
@@ -6,11 +6,12 @@
       .copyright!= `&copy;${theme.footer.owner.since} - ${nowYear} By ${config.author}`
     else
       .copyright!= `&copy;${nowYear} By ${config.author}`
-  - let offduty_img = theme.footer.runtime.offduty_img
-  - let offduty_description = theme.footer.runtime.offduty_description
+
+  - let work_img = theme.footer.runtime.work_img
+  - let work_description = theme.footer.runtime.work_description
   if theme.footer.runtime.enable
     #workboard
-      img(src=`${offduty_img}`, alt=`${offduty_description}`, title=`${offduty_description}`, class="workSituationImg boardsign")
+      img(src=`${work_img}`, alt=`${work_description}`, title=`${work_description}`, class="workSituationImg boardsign")
       #runtimeTextTip
   if theme.footer.bdageitem
     p#ghbdages
