修复评论弹幕头像懒加载异常

--- a/layout/includes/anzhiyu/commentBarrage-js.pug
+++ b/layout/includes/anzhiyu/commentBarrage-js.pug
@@ -99,7 +99,7 @@ script.
             ${data.mailMd5 === "d338f432ad0bf2f61e5fe4ad1642725d" ? "博主" : "热评"}
           </a>
           <div class="barrageNick">${data.nick}</div>
-          <img class="barrageAvatar" src="https://cravatar.cn/avatar/${data.mailMd5}"/>
+          <img class="nolazyload barrageAvatar" src="https://cravatar.cn/avatar/${data.mailMd5}"/>
           <a class="comment-barrage-close" href="javascript:anzhiyu.switchCommentBarrage()"><i class="fa-solid fa-xmark"></i></a>
         </div>
         <a class="barrageContent" href="#${data.id}">
