修复部分评论弹幕pjax刷新问题

--- a/layout/includes/anzhiyu/commentBarrage-js.pug
+++ b/layout/includes/anzhiyu/commentBarrage-js.pug
@@ -1,4 +1,4 @@
-script.
+script(data-pjax=true).
   var commentBarrageConfig = {
     maxBarrage: #{theme.comment_barrage_config.maxBarrage},
     barrageTime: #{theme.comment_barrage_config.barrageTime},
