新增CDN配置项animation_css 新增iconfont配置项 移除tag_plugins配置项 移除wowjs配置项 内置tag_plugins中的部分标签

--- a/layout/includes/head.pug
+++ b/layout/includes/head.pug
@@ -67,6 +67,10 @@ link(rel="canonical" href=urlNoIndex())
 if (theme.pwa && theme.pwa.enable)
   !=partial('includes/head/pwa', {}, {cache: true})
 
+
+//- animation依赖
+link(rel="stylesheet", href=url_for(theme.asset.animation_css))
+
 //- main css
 link(rel='stylesheet', href=url_for(theme.asset.main_css))
 link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
