--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -102,6 +102,8 @@ div
     script.
       LA.init({id: "#{ck}", ck: "#{ck}"});
       new LingQue.Monitor().init({id: "#{theme.LA.LingQueMonitorID}", sendSuspicious:true});
+  //- iconfont依赖
+  script(async src=url_for(theme.iconfont))
 
   != fragment_cache('injectBottom', function(){return injectHtml(theme.inject.bottom)})
 
