--- a/layout/includes/page/about.pug
+++ b/layout/includes/page/about.pug
@@ -88,7 +88,7 @@ if site.data.about
                 - let link = item.statistic.link
                 - let text = item.statistic.text
                 a.banner-button(onclick=`pjax.loadUrl("${link}")`)
-                  i.fas.fa-circle-arrow-up-right
+                  i.fas.fa-circle-right
                   |  
                   span.banner-button-text=text
         .author-content-item-group.column.mapAndInfo
@@ -195,7 +195,7 @@ if site.data.about
               .tips=`跟 ${aboutName} 一起欣赏更多音乐`
             .banner-button-group
               a.banner-button(onclick=`pjax.loadUrl("${music_link}")`)
-                i.fas.fa-circle-arrow-up-right
+                i.fas.fa-circle-right
                 |  
                 span.banner-button-text 更多推荐
 
