--- a/layout/includes/page/album_detail.pug
+++ b/layout/includes/page/album_detail.pug
@@ -10,7 +10,7 @@
             .tips=i.description
           .banner-button-group
             a.banner-button(onclick='pjax.loadUrl("/about/")', data-pjax-state)
-              i.fas.fa-circle-arrow-up-right(style='font-size: 1.5rem')
+              i.fas.fa-circle-right(style='font-size: 1.5rem')
               span.banner-button-text 关于我
       section.timeline.page-1
         ul#waterfall.list
@@ -45,7 +45,7 @@
                       i.far.fa-location-dot
                       span=item.address
                   .album-info-from
-                      i.far.fa-popsicle
+                      i.fas.fa-fire
                       if item.from 
                           span=item.from
                       else 
