--- a/layout/includes/page/fcircle.pug
+++ b/layout/includes/page/fcircle.pug
@@ -8,7 +8,7 @@ if theme.friends_vue.enable
           .tips 使用 友链朋友圈 订阅友链最新文章
         .banner-button-group
           a.banner-button(onclick='pjax.loadUrl("/about")')
-            i(style='font-size: 1.5rem', class="fas fa-circle-arrow-up-right")
+            i.fas.fa-circle-right(style='font-size: 1.5rem')
             span.banner-button-text 关于我
     .title-h2-a
       .title-h2-a-left
