--- a/layout/includes/rightside.pug
+++ b/layout/includes/rightside.pug
@@ -60,6 +60,6 @@ mixin rightsideItem(array)
       +rightsideItem(showArray)
 
     button#center-console(type="button" title=_p("中控台"))
-      i.far.fa-fish
+      i.fas.fa-fish-fins
     button#go-up(type="button" title=_p("rightside.back_to_top"))
       i.fas.fa-arrow-up
