--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -51,7 +51,7 @@
       z-index: 1;
       transition: all 0.3s ease 0s;
       cursor: pointer;
-      .fas.fa-circle-arrow-up-right 
+      .fas .fa-circle-right 
           font-size: 1.3rem;
           margin-right: 10px;
 
