--- a/source/css/_tags/tip.styl
+++ b/source/css/_tags/tip.styl
@@ -25,7 +25,7 @@
     top -12px
     box-shadow 0 0 0 2.5px #f7f8f9
     font-weight 600
-    font-family "Font Awesome 6 Pro"
+    font-family "Font Awesome 6 Free"
     text-align center
   ol
     margin 0
