--- a/layout/includes/header/nav.pug
+++ b/layout/includes/header/nav.pug
@@ -25,12 +25,10 @@ nav#nav
   #nav-right
     .nav-button.only-home#travellings_button(style='display: flex')
       a.site-page(onclick='totraveling()', title='随机前往一个开往项目网站', href='javascript:void(0);', rel='external nofollow', data-pjax-state='external')
-        i.fa-solid.fa-train-subway(style='font-size:1.2rem')
-
+        i.fas.fa-train(style='font-size:1.2rem')
     .nav-button#randomPost_button
       a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
-        i.fa-solid.fa-dice(style='font-size:1.2rem')
-    
+        i.fas.fa-dice(style='font-size:1.2rem')
     if (theme.algolia_search.enable || theme.local_search.enable)
       div.nav-button#search-button
         a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍')
