--- a/layout/includes/page/room.pug
+++ b/layout/includes/page/room.pug
@@ -257,7 +257,7 @@
 		span 哇,被你发现了,这里是我的小房间，要一起玩游戏🎮嘛
 		.banner-button-group
 			a.banner-button(onclick='pjax.loadUrl("/about/")')
-				i.fas.fa-circle-arrow-up-right(style='font-size: 1.5rem')
+				i.fas.fa-circle-right(style='font-size: 1.5rem')
 				span.banner-button-text 立刻玩
 	script(async).
 		const h = document.querySelector("#h");
