--- a/source/css/_custom/nav_menu/nav_menu.css
+++ b/source/css/_custom/nav_menu/nav_menu.css
@@ -372,7 +372,7 @@ center#name-container {
   font-weight: bold;
 }
 
-#menus .menus_item .menus_item_child .site-page.child.faa-parent.animated-hover .fa-fw.fa-regular.fa-fan.faa-tada {
+#menus .menus_item .menus_item_child .site-page.child.faa-parent.animated-hover .fa-fw.fa-fan.faa-tada {
   animation: rotate 1.6s linear infinite;
 }
 
