--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -11,7 +11,7 @@
 .fontawesomeIcon
   display: inline-block
   font-weight: 600
-  font-family: 'Font Awesome 6 Pro'
+  font-family: 'Font Awesome 6 Free'
   text-rendering: auto
   -webkit-font-smoothing: antialiased
 
