修改文章blockquote样式

--- a/source/css/_custom/post/post.css
+++ b/source/css/_custom/post/post.css
@@ -85,3 +85,12 @@
   padding-top: 1.5rem;
   padding-left: 0;
 }
+
+blockquote {
+  border: var(--style-border-always);
+  background-color: var(--anzhiyu-secondbg);
+  color: var(--anzhiyu-secondtext);
+  border-radius: 8px;
+  margin: 1rem 0;
+  padding: 0.5rem 0.8rem;
+}
