--- a/layout/includes/header/nav.pug
+++ b/layout/includes/header/nav.pug
@@ -19,14 +19,14 @@ nav#nav
 
   div.mask-name-container
     center(id="name-container")
-      a(id="page-name" href="javascript:btf.scrollToDest(0, 500)") PAGE_NAME
+      a(id="page-name" href="javascript:anzhiyu.scrollToDest(0, 500)") PAGE_NAME
     
   #menus
     !=partial('includes/header/menu_item', {}, {cache: true})
   #nav-right
     if theme.nav.travelling
       .nav-button.only-home#travellings_button(style='display: flex')
-        a.site-page(onclick='totraveling()', title='随机前往一个开往项目网站', href='javascript:void(0);', rel='external nofollow', data-pjax-state='external')
+        a.site-page(onclick='anzhiyu.totraveling()', title='随机前往一个开往项目网站', href='javascript:void(0);', rel='external nofollow', data-pjax-state='external')
           i.fas.fa-train(style='font-size:1.2rem')
     .nav-button#randomPost_button
       a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
@@ -45,7 +45,7 @@ nav#nav
     div.nav-button#nav-totop
       a.totopbtn(href='javascript:void(0);')
         i.fas.fa-arrow-up
-        span#percent(onclick="btf.scrollToDest(0,500)") 0
+        span#percent(onclick="anzhiyu.scrollToDest(0,500)") 0
     
     #toggle-menu
       a.site-page(href='javascript:void(0);')
