--- a/layout/includes/page/album_detail.pug
+++ b/layout/includes/page/album_detail.pug
@@ -42,7 +42,7 @@
                       | 链接
                   if item.address
                     .album-info-address
-                      i.far.fa-location-dot
+                      i.fas.fa-location-dot
                       span=item.address
                   .album-info-from
                       i.fas.fa-fire
