1. 调整响应式大小为1024 2. 修复swiper开启移动端表现 3. 修复首页分类标签丢失状况

--- a/source/css/_layout/third-party.styl
+++ b/source/css/_layout/third-party.styl
@@ -107,3 +107,13 @@ mjx-container[display],
 
 .snackbar-css
   border-radius: 5px !important
+
+#hexo-circle-of-friends-root
+  overflow hidden
+  .fcircle_page
+    overflow hidden
+    .cf-article-group 
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin: 0 -8px;
