修复少量文章下的控制台样式异常 fix #6

--- a/source/css/_custom/console/console.css
+++ b/source/css/_custom/console/console.css
@@ -51,7 +51,7 @@
 #console .console-card-group-right {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   height: 100%;
   width: 60%;
   overflow: hidden;
