[壮举]: 支持可配置项的fontawesome与ali_iconfont_js。 [修复]: 修复右键菜单在靠右或靠下时，将菜单显示在鼠标左方\上方。 [样式]: 首页动画调整。

--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -98,9 +98,11 @@ div
       LA.init({id: "#{ck}", ck: "#{ck}"});
       new LingQue.Monitor().init({id: "#{theme.LA.LingQueMonitorID}", sendSuspicious:true});
   //- iconfont依赖
-  script(async src=url_for(theme.asset.iconfont_js))
-  if theme.iconfont
-    script(async src=url_for(theme.iconfont))
+  link(rel="stylesheet" href=url_for(theme.asset.iconfont_css))
+  if (theme.icons && theme.icons.iconfont_multicolor_js)
+    script(async src=url_for(theme.asset.iconfont_js))
+  if (theme.icons && theme.icons.ali_iconfont_js)
+    script(async src=url_for(theme.icons.ali_iconfont_js))
 
   != fragment_cache('injectBottom', function(){return injectHtml(theme.inject.bottom)})
 
