--- a/source/css/_custom/essay_page/home_essay_bar.css
+++ b/source/css/_custom/essay_page/home_essay_bar.css
@@ -2,7 +2,7 @@
   background: var(--anzhiyu-white);
   color: var(--anzhiyu-fontcolor);
   padding: 0.5rem 1rem;
-  border-radius: 30px;
+  border-radius: 12px;
   box-shadow: var(--anzhiyu-shadow-lightblack);
   display: flex;
   transition: all 0.3s ease 0s;
@@ -40,15 +40,19 @@
   display: flex;
   flex-direction: column;
 }
-.bber-logo {
-  font-size: 1.5rem;
+i.bber-logo {
+  font-size: 2rem;
   line-height: 22px;
   margin-right: 1rem;
   transition: all 0.3s ease 0s;
   cursor: pointer !important;
 }
+i.bber-logo:hover,
+i.bber-gotobb:hover {
+  color: var(--anzhiyu-main);
+}
 
-.bber-gotobb {
+i.bber-gotobb {
   line-height: 30px;
   margin-left: 1rem;
   transition: all 0.3s ease 0s;
@@ -67,6 +71,9 @@
   cursor: pointer;
   white-space: nowrap;
 }
+#bber-talk .li-style:hover {
+  color: var(--anzhiyu-main);
+}
 
 #bbTimeList:hover {
   border: var(--style-border-hover);
@@ -74,10 +81,6 @@
 }
 
 /* 文章页H1-H6图标样式效果 */
-.bbTimeList .bber-logo {
-  -webkit-animation: rotate 1.6s linear infinite;
-  animation: rotate 1.6s linear infinite;
-}
 @-webkit-keyframes rotate {
   0% {
     -webkit-transform: rotate(0deg);
