--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -92,7 +92,7 @@
         i
           margin: 0 4px 0 0
 
-        .fa-spinner
+        .anzhiyu-icon-spinner
           margin: 0
 
         .article-meta-label
