--- a/layout/includes/bbTimeList.pug
+++ b/layout/includes/bbTimeList.pug
@@ -1,7 +1,6 @@
 if site.data.essay
   #bbTimeList.bbTimeList.container
-      svg.icon.bber-logo.iconfont.icon-chrome(onclick=`pjax.loadUrl("/essay/")`,title="即刻短文", aria-hidden="true")
-        use(xlink:href="#icon-chrome")
+      i.anzhiyufont.anzhiyu-icon-jike.bber-logo(onclick=`pjax.loadUrl("/essay/")`,title="即刻短文", aria-hidden="true")
       #bbtalk.swiper-container.swiper-no-swiping.essay_bar_swiper_container(tabindex="-1")
         #bber-talk.swiper-wrapper(onclick=`pjax.loadUrl("/essay/")`)
           each i in site.data.essay
@@ -9,8 +8,7 @@ if site.data.essay
               if index < 10
                 - var contentText = item.image ? item.content + ' [图片]' : item.content
                 .li-style.swiper-slide= contentText
-
-      i.bber-gotobb.fas.fa-arrow-circle-right(onclick=`pjax.loadUrl("/essay/")`,title="查看全文")
+      i.bber-gotobb.anzhiyufont.anzhiyu-icon-circle-arrow-right( onclick=`pjax.loadUrl("/essay/")`,title="查看全文")
 
   if (is_home() && !is_current("/"))
     script(src=url_for(theme.home_top.swiper.swiper_js))
