[样式]: 优化移动端categoryBar样式表现

--- a/source/css/_custom/essay_page/home_essay_bar.css
+++ b/source/css/_custom/essay_page/home_essay_bar.css
@@ -20,8 +20,8 @@
   }
 }
 @media screen and (max-width: 768px) {
-  #bbTimeList {
-    margin: 0.2rem auto 0;
+  div#bbTimeList {
+    margin: 0 15px 15px;
   }
 }
 [data-theme="dark"] #bbTimeList {
