--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -143,6 +143,8 @@
     height: 240px;
   #swiper_container_blog
     padding: 10px;
+  #home_top
+    padding: 0px 15px 0px;
   
   
 if hexo-config('home_top.swiper.enable') == true
