--- a/layout/includes/page/about.pug
+++ b/layout/includes/page/about.pug
@@ -123,7 +123,7 @@ if site.data.about
       
       .author-content
         .author-content-item.personalities
-          - let {author_name, personality_type, photo_url, personality_img} = item.personalities
+          - let {author_name, personality_type, photo_url, personality_img, name_url} = item.personalities
           .author-content-item-tips 性格
           span.author-content-item-title= author_name
           .title2(style='color:#ac899c')= personality_type
@@ -131,7 +131,7 @@ if site.data.about
             | 在 
             a(href='https://www.16personalities.com/', target='_blank', rel='noopener nofollow') 16personalities
             |  了解更多关于 
-            a(target='_blank', rel='noopener external nofollow', href='https://www.16personalities.com/ch/esfj-%E4%BA%BA%E6%A0%BC')= author_name
+            a(target='_blank', rel='noopener external nofollow', href= name_url)= author_name
           .image
             img.no-lightbox(src=url_for(personality_img), alt='人格')
         .author-content-item.myphoto
