--- a/source/css/_custom/anzhiyu/custom.css
+++ b/source/css/_custom/anzhiyu/custom.css
@@ -175,14 +175,14 @@ body::-webkit-scrollbar {
 }
 
 #article-container
-  a:not([data-fancybox="gallery"]):not(.headerlink):not(.cf-friends-link):not(.tag-Link):not(.btn-anzhiyu) {
+  a:not([data-fancybox="gallery"]):not(.headerlink):not(.cf-friends-link):not(.tag-Link):not(.btn-anzhiyu):not(.no-text-decoration) {
   font-weight: 500;
   border-bottom: solid 2px var(--anzhiyu-lighttext);
   color: var(--anzhiyu-fontcolor);
   padding: 0 0.2em;
   text-decoration: none;
 }
-#article-container a:not([data-fancybox="gallery"]):not(.headerlink):not(.cf-friends-link):not(.btn-anzhiyu):hover {
+#article-container a:not([data-fancybox="gallery"]):not(.headerlink):not(.cf-friends-link):not(.btn-anzhiyu):not(.no-text-decoration):hover {
   color: var(--anzhiyu-white);
   background: var(--anzhiyu-theme);
   box-shadow: var(--anzhiyu-shadow-lightblack);
@@ -207,7 +207,6 @@ html.hide-aside .layout > div:first-child {
 /* 文章hover边框 */
 #recent-posts .recent-post-item:hover {
   border: var(--style-border-hover);
-  box-shadow: var(--anzhiyu-shadow-main);
 }
 #recent-posts .recent-post-item:hover .recent-post-info .article-title {
   color: var(--anzhiyu-theme);
@@ -218,6 +217,7 @@ html.hide-aside .layout > div:first-child {
   border-radius: 12px;
   cursor: pointer;
   border: var(--style-border);
+  box-shadow: var(--anzhiyu-shadow-border);
 }
 /* 移动端容器padding */
 @media screen and (max-width: 768px) {
