--- a/layout/includes/mixins/post-ui.pug
+++ b/layout/includes/mixins/post-ui.pug
@@ -49,11 +49,11 @@ mixin postUI(posts)
                 time(datetime=date_xml(article[date_type]) title=date_title + ' ' + full_date(article[date_type]))=date(article[date_type], config.date_format)
           if (theme.post_meta.page.tags && article.tags.data.length > 0)
             span.article-meta.tags
-              i.anzhiyufont.anzhiyu-icon-tag
               each item, index in article.tags.data
-                a(href=url_for(item.path)).article-meta__tags #[=item.name]
-                if (index < article.tags.data.length - 1)
-                  span.article-meta-link #[='•']
+                a(href=url_for(item.path)).article-meta__tags 
+                  span 
+                    i.anzhiyufont.anzhiyu-icon-hashtag
+                    =item.name
           
           mixin countBlockInIndex
             - needLoadCountJs = true
